fix: centered event selector on mobile

--- a/src/app/(site)/css/eventListLayout.css
+++ b/src/app/(site)/css/eventListLayout.css
@@ -4,7 +4,7 @@
     font-size: xxx-large;
     color: #493725;
     padding-top: 4%;
-    padding-left: 5%;
+    margin-left: 5%;
 }
 
 .EventDisplay {
@@ -21,7 +21,6 @@
     flex-direction: column;
     width: fit-content;
     height: fit-content;
-    padding-left: 5%;
     align-items: center;
 }
 
@@ -99,4 +98,30 @@
 .EventsContainer p {
     font-family: "NeueMachina-Regular";
     font-size: small;
+}
+
+@media only screen and (max-width: 768px) {
+    .EventsHeader {
+        display: block;
+        text-align: center;
+        padding-top: 8%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .EventDisplay {
+        display: flex;
+        flex-direction: column;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        margin-left: auto;
+        margin-right: auto;
+        width: fit-content;
+        height: auto;
+    }
+
+    .DisplayedEventsContainer {
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
